@@ -7,6 +7,7 @@ http://codingteam.net/project/poezio/roadmap
 - /unquery command
 - default nickname is now $USER
 - Server on /join command can be omitted
+- /query command can now take a message in parameters
 
 * Poezio 0.6.1 - 13 Jun 2010
 - Enable tracebacks
